Grace/tests/gibbs/errors/t259.grace
// ERROR = P1004
if((6 * 9) == 42) then {
    print "So long and thanks for all the fish"
} elseif(true) {
    print "I'm not a refrigerator"
